[tool.poetry]
name = "PyNub"
version = "0.1.0"
description = "personal library for helper functions"
authors = ["navanchauhan <hey@navan.dev>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
